objects/Antra_Employee_Leaves__c.object
<CustomObject>
    <label>Antra Employee Leaves</label>
    <nameField>
        <displayFormat>ALV-{000}</displayFormat>
        <label>Leave ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Antra Employee Leaves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Leave_Type__c</fullName>
        <label>Leave Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>casual leave</fullName>
                </value>
                <value>
                    <fullName>earned leave</fullName>
                </value>
                <value>
                    <fullName>maternity leave</fullName>
                </value>
                <value>
                    <fullName>medical leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <referenceTo>Antra_Employee__c</referenceTo>
        <relationshipLabel>Antra Employee Leaves</relationshipLabel>
        <relationshipName>Antra_Employee_Leaves</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Leave_Reason__c</fullName>
        <label>Leave Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Leave_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Marriage</fullName>
                </value>
                <value>
                    <fullName>Maternity leave</fullName>
                </value>
                <value>
                    <fullName>Medically Unfit</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Personal Reason</fullName>
                </value>
                <value>
                    <fullName>Relative / Friend marriage</fullName>
                </value>
                <value>
                    <fullName>Ritual</fullName>
                </value>
                <value>
                    <fullName>Sick</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leave_Status__c</fullName>
        <label>Leave Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                    <default>true</default>
                    <label>Processing</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partial_Days__c</fullName>
        <label>Partial Days</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Start day</fullName>
                </value>
                <value>
                    <fullName>End day</fullName>
                </value>
                <value>
                    <fullName>start day &amp; End day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <formula>Employee_ID__r.First_name__c +&quot; &quot;+ Employee_ID__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leave_End_date__c</fullName>
        <label>Leave End date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>leave_duration__c</fullName>
        <formula>IF( Leave_start_date__c = Leave_End_date__c &amp;&amp; (ISPICKVAL( Partial_Days__c , &apos;Start day&apos;) || ISPICKVAL( Partial_Days__c , &apos;End day&apos;)),0.5,
IF( Leave_start_date__c = Leave_End_date__c &amp;&amp; (ISPICKVAL( Partial_Days__c , &apos;Start &amp; End day&apos;)),1,
IF(Leave_End_date__c &gt; Leave_start_date__c &amp;&amp; (ISPICKVAL( Partial_Days__c , &apos;Start day&apos;) || ISPICKVAL( Partial_Days__c , &apos;End day&apos;)) , (Leave_End_date__c -Leave_start_date__c )+0.5, (Leave_End_date__c -Leave_start_date__c )+1 )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>leave duration</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leave_start_date__c</fullName>
        <label>Leave start date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <validationRules>
        <fullName>Casual_leave_restriction</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Leave_Type__c , &apos;casual leave&apos;) &amp;&amp;  leave_duration__c &gt;3</errorConditionFormula>
        <errorMessage>unable to process casual leave because the leave applied is more than 3 days</errorMessage>
    </validationRules>
</CustomObject>